Fixed various footnotes CSS issues in Chrome/IE8. Chrome: Missing spacing between return link text and associated underlines, mysterious left/right borders appearing around footnotes container in print CSS IE8: "dead zone" in return links (side effect of Chrome-tailored fixes)

--- a/src/js/sass/footnotes.scss
+++ b/src/js/sass/footnotes.scss
@@ -16,6 +16,10 @@ sup a.footnote-link, .wet-boew-footnotes dl dd p.footnote-return a {
 		border-color: #555;
 	}
 }
+.wet-boew-footnotes dl dd p.footnote-return a {
+	display: inline-block;
+	padding-bottom: 0;
+}
 sup:target a.footnote-link, .wet-boew-footnotes dl dt:target + dd p.footnote-return a, 
 sup:focus a.footnote-link, .wet-boew-footnotes dl dt:focus + dd p.footnote-return a {
 	color: #FFF !important;
@@ -91,6 +95,10 @@ table th sup a.footnote-link {
 		background-color: transparent;
 	}
 	.wet-boew-footnotes {
+		border {
+			left: 0;
+			right: 0;
+		}
 		margin: {
 			left: 0;
 			right: 0;
